sorta fixed game page on mobile

--- a/app/game/game.less
+++ b/app/game/game.less
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   positiion: relative;
-  padding: 2em 10em 0 10em;
+  padding-top: 2em;
 }
 
 .photo-description {
@@ -157,7 +157,6 @@
 }
 
 .game--content {
-  width: 100%;
   margin-top: 20px;
 }
 
@@ -217,7 +216,11 @@
 
   .photo-description{
     height: 100% !important;
-    padding: 0;
+    padding-top: 2em;
+  }
+
+  .game--content {
+    width: 100% !important;
   }
 
   .game {
